Code restructuring, show hud version, JackPack update reminder

--- a/JackHUD/CHANGELOG.txt
+++ b/JackHUD/CHANGELOG.txt
@@ -1,4 +1,8 @@
 
+next:
+~ changed: some code restructuring
++ added: Shows HUD version now, added JackPack update reminder
+
 1.11r20:
 ~ fixed: correctly removing hud elements when in custody now
 ~ fixed: reverted previous Save/Load Preplanning fix, handling it by setup/rar now
