--- a/JackHUD/CHANGELOG.txt
+++ b/JackHUD/CHANGELOG.txt
@@ -1,4 +1,8 @@
 
+1.18r39:
++ enhanced assault banner: endless wave fix
++ kill counter: font size & alignment fix
+
 1.18r38:
 + quick fix to prevent crashes by the wave counter
 
