--- a/JackHUD/CHANGELOG.txt
+++ b/JackHUD/CHANGELOG.txt
@@ -1,13 +1,12 @@
 
-1.20r49:
-- removed "persistent crimenet filter settings" feature since it became obsolete
-- fixed some small things in the localization file
-
 1.20r48:
 - fixed crashing on heist start caused by hudassaultcorner changes
 - removed "remember gadget state" feature since it became obsolete
 - updated kill counters for dots
 - updated function signatures for U110
+- removed "persistent crimenet filter settings" feature since it became obsolete
+- fixed some small things in the localization file
+- fixed explosions & laser colors [by hexco321]
 
 1.19r47:
 - Added custom laser functionality to shotguns [by Spyboticsguy]
